--- a/app/G2_RT2.html
+++ b/app/G2_RT2.html
@@ -14,10 +14,13 @@
     <!-- build:js scripts/vendor/modernizr.js -->
     <script src="bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
+    <script type="text/javascript"
+  src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    </script>
   </head>
 
   <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse">
       <div class="navbar-inner">
         <div class="container">
 
@@ -68,17 +71,34 @@
     </div>
 
     <div class="container">
-      <div class="hero-unit">
-        <h1>'Allo, 'Allo!</h1>
-        <p>You now have</p>
-        <ul>
-          <li>HTML5 Boilerplate</li>
-          <li>Twitter Bootstrap</li>
-          <li>Font Awesome</li>
-        </ul>
-        <p>installed.</p>
-        <h3>Enjoy coding! - Yeoman</h3>
-      </div>
+<ol type="1">
+<li><p>Which of the following describe a straight line?</p>
+<ul>
+<li><span class="math">\(4x - 2y = 6\)</span></li>
+<li><span class="math">\(y = 2\)</span></li>
+<li>The points <span class="math">\((1,2)\)</span> and <span class="math">\((0,-1)\)</span></li>
+<li><span class="math">\(y = 4x\)</span></li>
+<li><span class="math">\(y = 2x - 3\)</span></li>
+<li>The point <span class="math">\((3,3)\)</span> and the direction vector <span class="math">\(\left(\begin{array}{c} 1 \\ 2 \end{array} \right)\)</span></li>
+<li><span class="math">\(x = 7y\)</span></li>
+<li>The points <span class="math">\((-1, -4)\)</span>, <span class="math">\((3, 7)\)</span>, and <span class="math">\((8, 8)\)</span></li>
+<li><span class="math">\(y - 10 = 3(x + 2)\)</span></li>
+<li>The points <span class="math">\((\frac{1}{2},-2)\)</span>, <span class="math">\((1,-1)\)</span>, and <span class="math">\((\frac{3}{2}, 0)\)</span></li>
+<li><span class="math">\(y = x^2 + 2\)</span></li>
+<li><span class="math">\(y^2 = x^2\)</span></li>
+<li><span class="math">\(0.5x - 7y + 2 = 0\)</span></li>
+<li><span class="math">\(xy = 1\)</span></li>
+<li><span class="math">\(y^2 - 4xy + 4x^2 = 0\)</span></li>
+</ul>
+<p>How did you decide?</p></li>
+<li><p>Can you give any other ways to describe a unique straight line?</p></li>
+<li><p>Do any of them represent the same line?</p></li>
+</ol>
+<p>Now look just at the versions that <em>do</em> describe a unique straight line.</p>
+<ol start="4" type="1">
+<li><p>Pick two of the descriptions. Can you take a line given by one description and express it using the other?</p></li>
+<li><p>Why might one description be more useful than another? Can you identify any advantages or disadvantages of any of these representations?</p></li>
+</ol>
     </div>
 
 
