--- a/app/G2_RT3.html
+++ b/app/G2_RT3.html
@@ -14,10 +14,13 @@
     <!-- build:js scripts/vendor/modernizr.js -->
     <script src="bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
+    <script type="text/javascript"
+  src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    </script>
   </head>
 
   <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse">
       <div class="navbar-inner">
         <div class="container">
 
@@ -68,17 +71,50 @@
     </div>
 
     <div class="container">
-      <div class="hero-unit">
-        <h1>'Allo, 'Allo!</h1>
-        <p>You now have</p>
-        <ul>
-          <li>HTML5 Boilerplate</li>
-          <li>Twitter Bootstrap</li>
-          <li>Font Awesome</li>
-        </ul>
-        <p>installed.</p>
-        <h3>Enjoy coding! - Yeoman</h3>
-      </div>
+<p>What do we mean by a <em>circle</em>?</p>
+<p>It's the set of all points at some fixed distance from some fixed point.</p>
+<p>For example, we might talk about the circle of radius 3 with centre <span class="math">\((-1,2)\)</span> --- this is the set of all points that are at distance 3 from <span class="math">\((-1,2)\)</span>.</p>
+<p>Now we're going to try to express this set of points as a set of solutions to an equation, in much the same way that we can describe a line as the set of solutions to an equation (for example, the line with gradient <span class="math">\(\frac{1}{2}\)</span> passing through <span class="math">\((0,1)\)</span> is precisely the set of all points <span class="math">\((x,y)\)</span> such that <span class="math">\(2y = x + 2\)</span>).</p>
+<p>When is the point <span class="math">\((x,y)\)</span> at distance 3 from <span class="math">\((-1,2)\)</span>?</p>
+<p>Here's a useful picture.</p>
+<p>ADD PICTURE OF AXES WITH THESE TWO POINTS MARKED AND A LINE SHOWING THE DISTANCE BETWEEN THEM</p>
+<p>The coordinate system gives us a very natural way to get a helpful right-angled triangle from this.</p>
+<p>ADD PICTURE SHOWING RIGHT-ANGLED TRIANGLE WITH SHORTER SIDE LENGTHS LABELLED</p>
+<p>If the point <span class="math">\((x,y)\)</span> were placed differently relative to <span class="math">\((-1,2)\)</span>, then we might get different triangles.</p>
+<div class="well">
+
+<section id="exercise" class="level4">
+<h4>Exercise</h4>
+<p>Find all the possible diagrams, and the side lengths of the resulting triangles.</p>
+</div>
+
+<p>Now Pythagoras's theorem helps us to find the distance between the points <span class="math">\((x,y)\)</span> and <span class="math">\((-1,2)\)</span>: it's <span class="math">\[\sqrt{(x+1)^2 + (2-y)^2}\]</span>.</p>
+<div class="well">
+</section>
+<section id="exercise-1" class="level4">
+<h4>Exercise</h4>
+Find the corresponding expressions for the distances in the other possible diagrams.
+</div>
+
+<p>So <span class="math">\((x,y)\)</span> lies on the circle of radius 3 with centre <span class="math">\((-1,2)\)</span> if, and only if, <span class="math">\[\sqrt{(x+1)^2 + (2-y)^2} = 3\]</span>.</p>
+<p>This, in turn, is satisfied if, and only if, <span class="math">\[(x+1)^2 + (2-y)^2 = 9\]</span>. (In one direction this is clear: by squaring both sides of the first equation we obtain the second. In the other direction, we can use the fact that <span class="math">\(\sqrt{(x+1)^2 + (2-y)^2}\)</span> must be positive to justify taking the positive root on both sides.)</p>
+<p>So the equation of the circle of radius 3 with centre <span class="math">\((-1,2)\)</span> is <span class="math">\[(x+1)^2 + (2-y)^2 = 9\]</span>.</p>
+<div class="well">
+</section>
+<section id="exercise-2" class="level4">
+<h4>Exercise</h4>
+Expand out the brackets and experiment with different ways of writing this equation. Which way(s) do you find most convenient, and why?
+</div>
+
+<div class="well">
+</section>
+<section id="exercise-3" class="level4">
+<h4>Exercise</h4>
+Pick a radius and a centre, and find the equation of the corresponding circle, with an explanation. Repeat until you find confident.
+</div>
+
+<p>THEN SOME SORT OF LINK TO G2_RT7</p>
+</section>
     </div>
 
 
