--- a/app/G2_RT7.html
+++ b/app/G2_RT7.html
@@ -14,10 +14,13 @@
     <!-- build:js scripts/vendor/modernizr.js -->
     <script src="bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
+    <script type="text/javascript"
+  src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    </script>
   </head>
 
   <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse">
       <div class="navbar-inner">
         <div class="container">
 
@@ -68,17 +71,39 @@
     </div>
 
     <div class="container">
-      <div class="hero-unit">
-        <h1>'Allo, 'Allo!</h1>
-        <p>You now have</p>
-        <ul>
-          <li>HTML5 Boilerplate</li>
-          <li>Twitter Bootstrap</li>
-          <li>Font Awesome</li>
-        </ul>
-        <p>installed.</p>
-        <h3>Enjoy coding! - Yeoman</h3>
-      </div>
+<ol type="1">
+<li><p>Take a fixed circle with centre <span class="math">\((a,b)\)</span> and radius <span class="math">\(r\)</span>. What is its equation?</p>
+<p>What are the equations of the following circles?</p>
+<ul>
+<li>Centre <span class="math">\((a+1,b)\)</span>, radius <span class="math">\(r\)</span>.</li>
+<li>Centre <span class="math">\((a-1,b)\)</span>, radius <span class="math">\(r\)</span>.</li>
+<li>Centre <span class="math">\((a,b+1)\)</span>, radius <span class="math">\(r\)</span>.</li>
+<li>Centre <span class="math">\((a,b-1)\)</span>, radius <span class="math">\(r\)</span>.</li>
+<li>Centre <span class="math">\((-a,b)\)</span>, radius <span class="math">\(r\)</span>.</li>
+<li>Centre <span class="math">\((b,a)\)</span>, radius <span class="math">\(r\)</span>.</li>
+<li>Centre <span class="math">\((a-b,0)\)</span>, radius <span class="math">\(r\)</span>.</li>
+<li>Centre <span class="math">\((2a,b)\)</span>, radius <span class="math">\(r\)</span>.</li>
+<li>Centre <span class="math">\((a,b)\)</span>, radius <span class="math">\(2r\)</span>.</li>
+<li>Centre <span class="math">\((a,b)\)</span>, radius <span class="math">\(\frac{1}{3}r\)</span>.</li>
+<li>Centre <span class="math">\((a,b)\)</span>, radius <span class="math">\(r+1\)</span>.</li>
+</ul></li>
+<li>Which of the following are equations of circles? For each that is, specify the centre and radius of the circle. For each that isn't, can you say what shape the equation describes?
+<ul>
+<li><span class="math">\((x - \pi)^2 + (y + 2)^2 = 3\)</span></li>
+<li><span class="math">\((x + 1)^2 + (y - 4)^2 = -1\)</span></li>
+<li><span class="math">\(x^2 + 2x + y = 2\)</span></li>
+<li><span class="math">\(x^2 + y^2 = 4\)</span></li>
+<li><span class="math">\((x - 1)^2 + y^2 = 4\)</span></li>
+<li><span class="math">\((x - 1)^2 - y^2 = 4\)</span></li>
+<li><span class="math">\(x^2 + y^2 - 3x - y = -1.5\)</span></li>
+<li><span class="math">\(x^2 + y^2 + 3x + y = -1.5\)</span></li>
+</ul></li>
+<li><p>Find the equation of the circle of which the line segment from <span class="math">\((-5, 2)\)</span> to <span class="math">\((3, -1)\)</span> is a diameter.</p>
+<p>How many other circles pass through both of these two points? Can you find the equations of any of them?</p></li>
+<li><p>If we specify two (distinct) points, is there necessarily a unique circle that passes through them? What if we specify three (distinct) points? Or four? Or...?</p>
+<p>Pick examples of a suitable number of points. Can you find the equation of the unique circle that passes through them?</p></li>
+</ol>
+
     </div>
 
 
