sdjusted layout urls and grunt watches

--- a/app/index.html
+++ b/app/index.html
@@ -42,9 +42,9 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="G2_RT2.html">G2_RT2</a></li>
-                  <li><a href="G2_RT3.html">G2_RT3</a></li>
-                  <li><a href="G2_RT7.html">G2_RT7</a></li>
+                  <li><a href="/resources/G2_RT2/index.html">G2_RT2</a></li>
+                  <li><a href="/resources/G2_RT3/index.html">G2_RT3</a></li>
+                  <li><a href="/resources/G2_RT7/index.html">G2_RT7</a></li>
                   <li class="divider"></li>
                   <li class="nav-header">Nav header</li>
                   <li><a href="#">Separated link</a></li>
