--- a/app/index.html
+++ b/app/index.html
@@ -3,118 +3,131 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <link rel="stylesheet" href="styles/main.css">
-    <!-- build:js scripts/vendor/modernizr.js -->
-    <script src="bower_components/modernizr/modernizr.js"></script>
-    <!-- endbuild -->
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title></title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width">
+  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+  <link rel="stylesheet" href="/styles/main.css">
+  <!-- build:js scripts/vendor/modernizr.js -->
+  <script src="/bower_components/modernizr/modernizr.js"></script>
+  <!-- endbuild -->
+  <script type="text/javascript"
+src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  </script>
+</head>
+<body> 
 
-  <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-
-
-          <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-
-          <!-- Be sure to leave the brand out there if you want it shown -->
-          <a class="brand" href="#"><img src="images/cmep-logo.png" style="height:30px;padding:0px 5px 0px 0px"/>CMEP Tube</a>
-
-          <!-- Everything you want hidden at 940px or less, place within here -->
-          <div class="nav-collapse collapse">
-            <!-- .nav, .navbar-search, .navbar-form, etc -->
-            <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#">Map</a></li>
-              <li class="divider-vertical"></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <li><a href="/resources/G2_RT2/index.html">G2_RT2</a></li>
-                  <li><a href="/resources/G2_RT3/index.html">G2_RT3</a></li>
-                  <li><a href="/resources/G2_RT7/index.html">G2_RT7</a></li>
-                  <li class="divider"></li>
-                  <li class="nav-header">Nav header</li>
-                  <li><a href="#">Separated link</a></li>
-                  <li><a href="#">One more separated link</a></li>
-                </ul>
-              </li>
-              <form class="navbar-search pull-left" action="">
-                <input type="text" class="search-query span2" placeholder="Search">
-              </form>
-              <li class="dropdown pull-right">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Introductions <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">for Students</a></li>
-                  <li><a href="#">for Teachers</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-
+<div class="navbar navbar-inverse navbar-fixed-top">
+  <div class="navbar-inner">
     <div class="container">
-      <div class="hero-unit">
-        <h1>'Allo, 'Allo!</h1>
-        <p>You now have</p>
-        <ul>
-          <li>HTML5 Boilerplate</li>
-          <li>Twitter Bootstrap</li>
-          <li>Font Awesome</li>
+
+
+      <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
+      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </a>
+
+      <!-- Be sure to leave the brand out there if you want it shown -->
+      <a class="brand" href="#"><img src="/images/cmep-logo.png" style="height:30px;padding:0px 5px 0px 0px"/>CMEP Tube</a>
+
+      <!-- Everything you want hidden at 940px or less, place within here -->
+      <div class="nav-collapse collapse">
+        <!-- .nav, .navbar-search, .navbar-form, etc -->
+        <ul class="nav">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">Map</a></li>
+          <li class="divider-vertical"></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="/resources/G2_RT2/index.html">G2_RT2</a></li>
+              <li><a href="/resources/G2_RT3/index.html">G2_RT3</a></li>
+              <li><a href="/resources/G2_RT7/index.html">G2_RT7</a></li>
+              <li class="divider"></li>
+              <li class="nav-header">Nav header</li>
+              <li><a href="#">Separated link</a></li>
+              <li><a href="#">One more separated link</a></li>
+            </ul>
+          </li>
+          <form class="navbar-search pull-left" action="">
+            <input type="text" class="search-query span2" placeholder="Search">
+          </form>
+          <li class="dropdown pull-right">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Introductions <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">for Students</a></li>
+              <li><a href="#">for Teachers</a></li>
+            </ul>
+          </li>
         </ul>
-        <p>installed.</p>
-        <h3>Enjoy coding! - Yeoman</h3>
       </div>
     </div>
+  </div>
+</div>
 
 
-    <!--[if lt IE 7]>
-      <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-    <![endif]-->
+<div class="container-fluid">
+  <div class="row-fluid">
+    <div id="sidebar1" class="span4">
+      <div class="accordion" id="linesMenu">
+  A: Algebra
+C: Calculus
+CN: Complex Numbers
+DE: Differential Equations
+E: Equations and Inequalities
+F: Functions
+G: Geometry
+M: Mechanics
+NA: Numbers and Algorithms
+P: Probability
+V: Vectors
+</div>
+    </div>
+    <div id="content" class="span6">
+      <h1 id="the-tube-map">The Tube Map</h1>
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
-      var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-      (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-      g.src='//www.google-analytics.com/ga.js';
-      s.parentNode.insertBefore(g,s)}(document,'script'));
-    </script>
+    </div>
+  </div>
+</div>
 
 
+<!--[if lt IE 7]>
+  <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
+<![endif]-->
 
-        <!-- build:js scripts/main.js -->
-        <script src="bower_components/jquery/jquery.js"></script>
-        <script src="scripts/main.js"></script>
-        <!-- endbuild -->
+<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+<script>
+  var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
+  (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+  g.src='//www.google-analytics.com/ga.js';
+  s.parentNode.insertBefore(g,s)}(document,'script'));
+</script>
 
-        <!-- build:js scripts/vendor/bootstrap.js -->
-        <script src="bower_components/bootstrap/js/bootstrap-affix.js"></script>
-        <script src="bower_components/bootstrap/js/bootstrap-alert.js"></script>
-        <script src="bower_components/bootstrap/js/bootstrap-dropdown.js"></script>
-        <script src="bower_components/bootstrap/js/bootstrap-tooltip.js"></script>
-        <script src="bower_components/bootstrap/js/bootstrap-modal.js"></script>
-        <script src="bower_components/bootstrap/js/bootstrap-transition.js"></script>
-        <script src="bower_components/bootstrap/js/bootstrap-button.js"></script>
-        <script src="bower_components/bootstrap/js/bootstrap-popover.js"></script>
-        <script src="bower_components/bootstrap/js/bootstrap-typeahead.js"></script>
-        <script src="bower_components/bootstrap/js/bootstrap-carousel.js"></script>
-        <script src="bower_components/bootstrap/js/bootstrap-scrollspy.js"></script>
-        <script src="bower_components/bootstrap/js/bootstrap-collapse.js"></script>
-        <script src="bower_components/bootstrap/js/bootstrap-tab.js"></script>
-        <!-- endbuild -->
+<!-- build:js scripts/main.js -->
+<script src="/bower_components/jquery/jquery.js"></script>
+<script src="/scripts/main.js"></script>
+<!-- endbuild -->
+
+<!-- build:js scripts/vendor/bootstrap.js -->
+<script src="/bower_components/bootstrap/js/bootstrap-affix.js"></script>
+<script src="/bower_components/bootstrap/js/bootstrap-alert.js"></script>
+<script src="/bower_components/bootstrap/js/bootstrap-dropdown.js"></script>
+<script src="/bower_components/bootstrap/js/bootstrap-tooltip.js"></script>
+<script src="/bower_components/bootstrap/js/bootstrap-modal.js"></script>
+<script src="/bower_components/bootstrap/js/bootstrap-transition.js"></script>
+<script src="/bower_components/bootstrap/js/bootstrap-button.js"></script>
+<script src="/bower_components/bootstrap/js/bootstrap-popover.js"></script>
+<script src="/bower_components/bootstrap/js/bootstrap-typeahead.js"></script>
+<script src="/bower_components/bootstrap/js/bootstrap-carousel.js"></script>
+<script src="/bower_components/bootstrap/js/bootstrap-scrollspy.js"></script>
+<script src="/bower_components/bootstrap/js/bootstrap-collapse.js"></script>
+<script src="/bower_components/bootstrap/js/bootstrap-tab.js"></script>
+<!-- endbuild -->
+
 </body>
 </html>
